feat: Add Notification, Result, Synopsis, User models and database connection logic
- Implemented Notification model with fields for recipient, type, title, message, and timestamps.
- Created Result model to store evaluation results with fields for group, drive, scores, and status.
- Developed Synopsis model for project proposals including title, abstract, objectives, and status.
- Established User model with authentication features, including password hashing and JWT token generation.
- Added database connection logic to connect to MongoDB using Mongoose.
- Created seeder script to populate the database with sample users, drives, and groups for testing.
- Implemented test scripts for validating drive creation logic and user authorization.

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "cd .. && NODE_PATH=./backend/node_modules node database/seeder.js",
-    "seed:delete": "cd .. && NODE_PATH=./backend/node_modules node database/seeder.js -d",
+    "seed": "node seed-database.js",
+    "seed:delete": "node seed-database.js --delete-only",
+    "seed:old": "cd .. && NODE_PATH=./backend/node_modules node database/seeder.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
