--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ PORT=5000
 NODE_ENV=development
 
 # MongoDB Atlas Configuration (switching to local for testing)
-# MONGODB_URI=mongodb+srv://ap:ap@cluster0.7qnxeml.mongodb.net/campuscurator?retryWrites=true&w=majority&appName=Cluster0
+# MONGODB_URI=mongodb+srv://raisoumitra123_db_user:upkG3FM74XXrGWFw@proj-mgmt-sw.tjbvk1l.mongodb.net/?appName=proj-mgmt-sw
 
 # Local MongoDB for testing
 MONGODB_URI=mongodb://localhost:27017/campuscurator
@@ -24,3 +24,6 @@ FRONTEND_URL=http://localhost:3000
 # File Upload Configuration
 MAX_FILE_SIZE=10485760
 UPLOAD_PATH=./uploads
+
+#Google OAuth Configuration
+
